# exemplo_ciencia_de_dados_cpp

./: .gitignore  CMakeLists.txt  README.md  anscombe.csv  fit_Cpp11.csv  plot.ps1  plotting_Cpp11.gnuplot
src/: main.cpp
